content/core/1.2.0/reference/vendr-core-services/igiftcardservice.md
---
title: IGiftCardService
description: API reference for IGiftCardService in Vendr, the eCommerce solution for Umbraco v8+
---
## IGiftCardService

```csharp
public interface IGiftCardService : IService
```

**Inheritance**

* interface [IService](../iservice/)

**Namespace**
* [Vendr.Core.Services](../)

### Methods

#### DeleteGiftCard (1 of 2)

```csharp
public void DeleteGiftCard(Guid id)
```

---

#### DeleteGiftCard (2 of 2)

```csharp
public void DeleteGiftCard(GiftCard entity)
```


---

#### GenerateGiftCardCode

```csharp
public string GenerateGiftCardCode(Guid storeId)
```


---

#### GetActiveGiftCards

```csharp
public IEnumerable<GiftCardReadOnly> GetActiveGiftCards(Guid storeId)
```


---

#### GetGiftCard (1 of 2)

```csharp
public GiftCardReadOnly GetGiftCard(Guid id)
```

---

#### GetGiftCard (2 of 2)

```csharp
public GiftCardReadOnly GetGiftCard(Guid storeId, string code)
```


---

#### GetGiftCards

```csharp
public IEnumerable<GiftCardReadOnly> GetGiftCards(Guid storeId)
```


---

#### GetGiftCardsByOrder

```csharp
public IEnumerable<GiftCardReadOnly> GetGiftCardsByOrder(Guid orderId)
```


---

#### GiftCardExists

```csharp
public bool GiftCardExists(Guid storeId, string code)
```


---

#### SaveGiftCard

```csharp
public void SaveGiftCard(GiftCard entity)
```


---

#### SearchGiftCards

```csharp
public PagedResult<GiftCardReadOnly> SearchGiftCards(Guid storeId, string searchTerm = null, 
    string code = null, string cartOrOrderNumber = null, Guid? currencyId = default(Guid?), 
    DateTime? fromDate = default(DateTime?), DateTime? toDate = default(DateTime?), 
    long currentPage = 1, long itemsPerPage = 50)
```


---

#### ValidateGiftCard

```csharp
public bool ValidateGiftCard(Guid storeId, string code, Guid currencyId)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
